# fastapi_homework_2_kuvatov_abylay

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
migrations/models/: 0_20231120083139_init.py  0_20231121145242_init.py
minio/data/.minio.sys/: format.json
src/app/: adapters.py  main.py  settings.py  task_1.py
src/app/api/: router.py  schemas.py
src/app/api/issue/: routes.py
src/app/core/: settings.py
src/app/db/: conf.py  models.py  repository.py
src/app/db/models/: database.py
src/app/exceptions/: common.py  handlers.py  http.py
src/app/tasks/: task_2.py  task_3.py  task_4_bonus.py
src/migrations/models/: 0_20231124135556_init.py  1_20231124135752_update.py  2_20231124141227_update.py
