[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Abylay Kuvatov <abukuvatov@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
